Align fix on mobile search form

--- a/src/sass/8-rwd/_rwd-xsmall.scss
+++ b/src/sass/8-rwd/_rwd-xsmall.scss
@@ -21,6 +21,7 @@
 
   .header__search {
     display: flex;
+    justify-content: center;
     margin-top: 2rem;
   }
 
